--- a/apps/tenant/vercel.json
+++ b/apps/tenant/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd ../.. && pnpm build:tenant",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
+  "buildCommand": "turbo build",
+  "installCommand": "pnpm install --frozen-lockfile",
   "framework": "nextjs"
 }
