fix: Implement direct CSS import strategy for Vercel production
- Remove CSS imports from shared-ui index.ts to avoid bundling conflicts
- Add explicit CSS export paths in shared-ui package.json
- Update layout.tsx files to import CSS directly from dist/styles.css
- Ensure clean separation between JS and CSS imports for better production build

--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -12,6 +12,7 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
+    "./dist/styles.css": "./dist/index.css",
     "./styles": "./dist/index.css"
   },
   "files": [
