--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -7,16 +7,18 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "development": "./src/index.ts",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "development": "./src/index.ts",
+      "import": "./src/index.ts",
+      "require": "./dist/index.cjs",
+      "default": "./src/index.ts"
     },
     "./dist/styles.css": "./dist/index.css",
     "./styles": "./dist/index.css"
   },
   "files": [
-    "dist/**"
+    "dist/**",
+    "src/**"
   ],
   "sideEffects": [
     "**/*.css",
